--- a/templates/book/new.html.twig
+++ b/templates/book/new.html.twig
@@ -1,16 +1,21 @@
-{% extends 'base.html.twig' %}
+{{ form_start(form, {'attr': {'id': 'book-form'}}) }}
 
-{% block title %}New Book{% endblock %}
+    <div class="mb-3">
+        {{ form_label(form.title) }}
+        {{ form_widget(form.title) }}
+        <div class="form-error-message">
+            {{ form_errors(form.title) }}
+        </div>
+    </div>
 
-{% block body %}
-    <h1>Create new Book</h1>
+    <div class="mb-3">
+        {{ form_label(form.author) }}
+        {{ form_widget(form.author) }}
+        <div class="form-error-message">
+            {{ form_errors(form.author) }}
+        </div>
+    </div>
 
-    {{ form_start(form, {'attr': {'id': 'book-form'}}) }}
-        {{ form_widget(form) }}
-        <button class="btn btn-primary">Save</button>
-    {{ form_end(form) }}
+    <button class="btn btn-primary">Save</button>
 
-    <a href="{{ path('app_book_index') }}">back to list</a>
-
-    <div id="book-list"></div>
-{% endblock %}
+{{ form_end(form) }}
