--- a/templates/book/new.html.twig
+++ b/templates/book/new.html.twig
@@ -1,21 +1,65 @@
-{{ form_start(form, {'attr': {'id': 'book-form'}}) }}
+{% extends 'base.html.twig' %}
 
-    <div class="mb-3">
-        {{ form_label(form.title) }}
-        {{ form_widget(form.title) }}
-        <div class="form-error-message">
-            {{ form_errors(form.title) }}
+{% block title %}Create Book{% endblock %}
+
+{% block body %}
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <h1 class="mb-4">Create a New Book</h1>
+
+            {{ form_start(form, {'attr': {'id': 'book-form'}}) }}
+
+            <div class="mb-3">
+                {{ form_label(form.title, null, {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
+                <div class="form-error-message text-danger small">
+                    {{ form_errors(form.title) }}
+                </div>
+            </div>
+
+            <div class="mb-3">
+                {{ form_label(form.author, null, {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.author, {'attr': {'class': 'form-control'}}) }}
+                <div class="form-error-message text-danger small">
+                    {{ form_errors(form.author) }}
+                </div>
+            </div>
+
+            <div class="mb-3">
+                {{ form_label(form.isbn, null, {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.isbn, {'attr': {'class': 'form-control'}}) }}
+                <div class="form-error-message text-danger small">
+                    {{ form_errors(form.isbn) }}
+                </div>
+            </div>
+
+            <div class="mb-3">
+                {{ form_label(form.publicationDate, null, {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.publicationDate, {'attr': {'class': 'form-control'}}) }}
+                <div class="form-error-message text-danger small">
+                    {{ form_errors(form.publicationDate) }}
+                </div>
+            </div>
+
+            <div class="mb-3">
+                {{ form_label(form.genre, null, {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.genre, {'attr': {'class': 'form-control'}}) }}
+                <div class="form-error-message text-danger small">
+                    {{ form_errors(form.genre) }}
+                </div>
+            </div>
+
+            <div class="mb-3">
+                {{ form_label(form.copies, null, {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.copies, {'attr': {'class': 'form-control'}}) }}
+                <div class="form-error-message text-danger small">
+                    {{ form_errors(form.copies) }}
+                </div>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Save</button>
+
+            {{ form_end(form) }}
         </div>
     </div>
-
-    <div class="mb-3">
-        {{ form_label(form.author) }}
-        {{ form_widget(form.author) }}
-        <div class="form-error-message">
-            {{ form_errors(form.author) }}
-        </div>
-    </div>
-
-    <button class="btn btn-primary">Save</button>
-
-{{ form_end(form) }}
+{% endblock %}
