--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,17 +6,15 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
 
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="{{ asset('build/app.css') }}">
+            <!-- Bootstrap CSS via CDN -->
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+                  rel="stylesheet"
+                  integrity="sha384-Gtvz7WvM4mIjLADZPuxfTUBn1zGeMZCgA2CnCBuEY3zmKtdUp8Z28hQXe3zW7QDw"
+                  crossorigin="anonymous">
         {% endblock %}
-
-        <!-- Bootstrap CSS  -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-              rel="stylesheet"
-              integrity="sha384-Gtvz7WvM4mIjLADZPuxfTUBn1zGeMZCgA2CnCBuEY3zmKtdUp8Z28hQXe3zW7QDw"
-              crossorigin="anonymous">
     </head>
     <body class="bg-light">
-
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom px-4 py-2 mb-4">
             <div class="container-fluid">
