--- a/templates/book/edit.html.twig
+++ b/templates/book/edit.html.twig
@@ -3,11 +3,19 @@
 {% block title %}Edit Book{% endblock %}
 
 {% block body %}
-    <h1>Edit Book</h1>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <h1 class="mb-4">Edit Book</h1>
 
-    {{ include('book/_form.html.twig', {'button_label': 'Update'}) }}
+                <!-- Form to edit book -->
+                {{ include('book/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_book_index') }}">back to list</a>
+                <a href="{{ path('app_book_index') }}" class="btn btn-secondary mt-3">Back to list</a>
 
-    {{ include('book/_delete_form.html.twig') }}
+                <!-- Delete form -->
+                {{ include('book/_delete_form.html.twig') }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
