--- a/templates/book/new.html.twig
+++ b/templates/book/new.html.twig
@@ -7,6 +7,8 @@
         <div class="col-md-8">
             <h1 class="mb-4">Create a New Book</h1>
 
+            <div id="form-errors"></div>
+
             <div id="form-container">
                 {% include 'book/_form.html.twig' %}
             </div>
