✅ Add validation tests for edge cases (future date, empty title, short genre)

--- a/templates/book/new.html.twig
+++ b/templates/book/new.html.twig
@@ -7,7 +7,8 @@
         <div class="col-md-8">
             <h1 class="mb-4">Create a New Book</h1>
 
-            <div id="form-errors"></div>
+            {# Papildomas konteineris klaidoms, kad testai galėtų rasti .form-error-message #}
+            <div id="form-errors" class="form-error-message text-danger mb-3"></div>
 
             <div id="form-container">
                 {% include 'book/_form.html.twig' %}
