--- a/templates/book/_form.html.twig
+++ b/templates/book/_form.html.twig
@@ -1,4 +1,9 @@
-{{ form_start(form, {'attr': {'id': 'book-form', 'novalidate': 'novalidate'}}) }}
+{{ form_start(form, {
+    'attr': {
+        'id': 'book-form',
+        'novalidate': 'novalidate'
+    }
+}) }}
 
 <div class="mb-3">
     {{ form_label(form.title) }}
@@ -84,8 +89,10 @@
     </div>
 </div>
 
-<button type="submit" class="btn btn-primary">
-    {{ button_label|default('Save') }}
-</button>
+<div class="text-center mt-4">
+    <button type="submit" class="btn btn-primary">
+        {{ button_label|default('Save') }}
+    </button>
+</div>
 
 {{ form_end(form) }}
